sublime/area.cpp
@@ -433,6 +433,7 @@ bool Area::closeView(View* view, bool silent)
         kDebug() << "Closing view for" << view->document()->documentSpecifier() << "views" << view->document()->views().size() << "in area" << this;
         int viewsInCurrentArea = 0; // Number of views for the same document in the current area
         int viewsInOtherAreas = 0; // Number of views for the same document in other areas
+        int viewsInOtherWorkingSets = 0; // Number of views for the same document in areas with different working-set
 
         foreach(View* otherView, doc.data()->views())
         {
@@ -441,9 +442,11 @@ bool Area::closeView(View* view, bool silent)
                 viewsInCurrentArea += 1;
             if(!area || (area != this))
                 viewsInOtherAreas += 1;
+            if(!area || (area != this && area->workingSet() != workingSet()))
+                viewsInOtherWorkingSets += 1;
         }
 
-        if(viewsInCurrentArea == 1 && viewsInOtherAreas == 0)
+        if(viewsInCurrentArea == 1 && (viewsInOtherAreas == 0 || viewsInOtherWorkingSets == 0))
         {
             alreadyClosingViews = doc.data()->views().toSet();
             bool ret = doc.data()->closeDocument(silent);
